--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,5 @@
 Maybe an ellipse tool
 
-assign names to each frame (e.g. brush, line, rotate)
-
 https://lospec.com/pixel-art-tutorials
 https://www.cosmigo.com/
 https://lospec.com/palette-list/importing-palettes
@@ -142,4 +140,16 @@ palette index out of range
   we currently get an error from libpng and an incomplete png file (no IEND)
   need to handle this properly
 
-store paths in QSettings (for file dialogs)
+make exporting less tedious
+  store paths in QSettings
+  assign names to each frame
+  scale up when exporting
+    regenerate title@4x
+  would it be useful to copy export settings to and from the clipboard?
+  should export settings be kept in the sprite file?
+
+gradient tool would be nice
+  primary click to start
+  secondary click to stop
+  line from primary to secondary
+  maybe something similar with circles but might not be as useful
