--- a/todo.txt
+++ b/todo.txt
@@ -201,14 +201,6 @@ make exporting less tedious
 
 proper undo/redo system
   an application-wide undo system would be cool
-  
-A builtin calculator?
-  just a text box and a label (below the palette maybe)
-  can sometimes be useful
-  is it really necessary?
-  how often will it be used?
-  if you find yourself needing to use a calculator then
-    maybe there is a feature missing
 
 behave like a proper Single Document Interface (SDI) application
   qtbase/examples/widgets/mainwindows/sdi
@@ -216,6 +208,13 @@ behave like a proper Single Document Interface (SDI) application
 quicklook plugin
   https://fespinoza.github.io/creating-a-quicklook-plugin-for-a-document-based-macos-application
   https://developer.apple.com/library/archive/documentation/UserExperience/Conceptual/Quicklook_Programming_Guide/Introduction/Introduction.html
+
+are frame tags useful?
+  being able to give a name to a span of frames
+  you can kind of achieve this by using layers (layer for each tag)
+    i think that's what I used to do with the old pixel animator
+  another way would be to split it into multiple files (file for each tag)
+  how would the interface look?
 
 --------------------------------- refactoring ----------------------------------
 
